// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button changes class when hovered 1`] = `
<button
  className="btn"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  
</button>
`;

exports[`Button changes class when hovered 2`] = `
<button
  className="btn btn-active"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  
</button>
`;

exports[`Button changes class when hovered 3`] = `
<button
  className="btn"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  
</button>
`;
